# my-director

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-12.jsonl
src/mydirector/: __main__.py  cli.py  emit.py  escalate.py  interview.py  plan.py  sources.py
tests/: test_cli.py  test_emit.py  test_escalate.py  test_interview.py  test_plan.py  test_sources.py
